# Cursor-HACKATHON

./: .gitignore  BRIEF.md  COMPANY_BRAIN_IMPLEMENTATION_PLAN.md  DOCUMENTATION.md  README.md  TO_SIMO_DO.md
.cursor/plans/: graph_and_chat_ui_64145338.plan.md
backend/: IMPLEMENTATION_NOTES.md  main.py  pyproject.toml
backend/app/: __init__.py  api_client.py  artifacts.py  cache.py  config.py  evidence.py  graph.py  kb.py  llm.py  normalizers.py  orchestrator.py  router.py  schemas.py
backend/app/handlers/: __init__.py  artifacts_handler.py  calls.py  crm.py  erp.py  generic.py  kb_handlers.py
backend/scripts/: diag_api.py  diag_router.py  run_samples.py  smoke_test.py
backend/static/: index.html
backend/tests/: test_core.py
hackathon info/: AGENTS.md  README.md
