[project]
name = "company-brain-starter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "fpdf2>=2.8.7",
    "httpx>=0.28.1",
    "openai>=2.41.1",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.3",
    "uvicorn[standard]>=0.49.0",
]
